--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,22 @@
 <html>
     <head>
         <Title>Index</Title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href=".style\main.css">
     </head>
     <body>
-        <ol>
-            <li>Home</li>
-            <li>Contato</li>
-            <li>Acesso</li>
-        </ol>
+        <header>
+             <ul>
+                <li><h1>The PlaceHolder</h1></li>
+                <form action="search.php" method="POST">
+                    <input size="20%" type="search">
+                    <input type="submit" value="Buscar">
+                </form>                
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="acesso.html">Acesso</a></li>
+            </ul>
+        </header>      
+        
 
     </body>
 </html>
