--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,12 @@
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="acesso.html">Acesso</a></li>
             </ul>
-        </header>      
-        
+        </header>
+        <div id="main">
 
+        </div>
+        <footer>
+            <p>By:LuisVell</p>
+        </footer>
     </body>
 </html>
